Fix add command format

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -40,14 +40,14 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 
 * *`list`* : Lists all engagements.
 * **`tab` ** `b/game` : Switches main window to start window of the game.
-* **`add`** `t/appointment s/09/11/2019/1200 e/09/11/2019/1330 l/NUS a/Ben|Tom d/Meeting on Monday p/HIGH` : +
+* **`add`** `t/appointment s/09/11/2019/1200 e/09/11/2019/1330 l/NUS d/Meeting on Monday a/Ben|Tom p/HIGH` : +
 Adds an engagement to the engagements list with the following details: +
 Engagement type: Appointment +
 Start time: 09/11/2019 at 1200 hours +
 End time: 09/11/2019 at 1330 hours +
 Location: NUS +
-Attendees: Ben and Tom +
 Description: Meeting on Monday +
+Attendees: Ben and Tom +
 Priority: High +
 * **`pdf` ** `i/1 t/Jason f/Harry`: Generates a document of the selected engagement of index 1, by setting the sender as `Harry` and receiver of the document as `Jason`.
 * **`delete`** `i/3` : Deletes the 3rd appointment shown in the current list.
