--- a/docs/team/kerwin97.adoc
+++ b/docs/team/kerwin97.adoc
@@ -11,58 +11,82 @@ image::kerwin97.png[width="200", align="left"]
 ****
 Hello! My name is Kerwin Lim. I'm a Computer Science Major at the National University of Singapore (NUS). I'm currently in my second year of studies.
 
-This portfolio page aims to document the contributions I have made in the development of TutorAid. Tutoraid is a project that my team and I completed for our CS2103T module. We have put in our heart and soul creating Tutoraid. It has been a tremendous learning journey for my team and I and we hope that user will enjoy and benefit from our product.
+This portfolio page aims to document the contributions I have made in the development of TutorAid. TutorAid is a project that my team and I completed for our CS2103T module. We have put in our heart and soul creating TutorAid. It has been a tremendous learning journey for my team and I and we hope that users will enjoy and benefit from our product!
 ****
 == PROJECT: TutorAid
 
 == Overview
 
-TutorAid is a handy application that was created for tutors and teaching assistants in NUS School of Computing to help improve their workflow and save time by better organizing all the information they require in one central location. It is a Command Line Interface (CLI) based tool to cater to computing professionals who are highly adept at typing but also provides a Graphical User Interface (GUI) interface for users to easily view and interact with TutorAid.
+TutorAid is a useful application created for Tutors, by Tutors. The purpose of our application is to be a all encompassing solution to store information such as notes and reminders. Our product is made for tutors and teaching assistants in NUS. However, we have plans to expand to tutors in general. +
+By storing their information in one cent ral location, tutors' workspace can be made more simple and organized. This can help improve productivity and enable a smooth workflow. A clear space is indeed a clear mind. +
+TutorAid is a Command Line Interface (CLI) based tool that caters to professionals adept at typing. We have recently added more Graphical User Interface (GUI) features to make TutorAid more user friendly and to increase efficiency.
 
 TutorAid boasts well thought out features which have been carefully selected and reviewed to fit the exact needs of our target audience. All of TutorAid's features and implementations are well documented in guides for users and developers respectively.
 
 .The Graphical User Interface of TutorAid
-image::../images/Ui.png[width="500"]
+image::reminders/UI.png[width="600"]
 
 == Role
 
-My main role was to prototype and develop the Reminders feature, the Calendar feature and the Graphical User Interface.
-The login command required me to think of how to put up a login window that only shows the main window when the user
-has logged in successfully. It also required me to think of how to encrypt the passwords stored and how to check whether they
-are valid as well. I also did the Earning feature where it tracks what earnings you have earned throughout the weeks. It has a claim status that
-allows you to see if you have claimed your earnings from your respective faculties.
+My main role was to prototype and develop the Reminders feature, the Calendar feature and make enhancements to the Graphical User Interface.
+The following sections illustrate these enhancements in more detail, as well as the relevant documentation I have added to the user and developer guides in relation to these enhancements.
+
 
 == Summary of contributions
 
-* *Major enhancement*: added *the ability to undo/redo previous commands*
-** What it does: allows the user to undo all previous commands one at a time. Preceding undo commands can be reversed by using the redo command.
+* *Major enhancement*: added *Reminders Feature*
+** What it does: allows ysers to add Reminders. These will then be displayed in a reminders window that will pop up and remind users of urgent tasks.
+** Justification: This feature improves the product significantly because users can be reminded of urgent and important tasks at hand. This will ensure that users have ample time to plan and complete their tasks punctually.
+** Highlights: This enhancement affects existing commands and commands to be added in future. It required an in-depth analysis of design alternatives. The implementation too was challenging as it required changes to existing commands.
+** Credits: _{mention here if you reused any code/ideas from elsewhere or if a third-party library is heavily used in the feature so that a reader can make a more accurate judgement of how much effort went into the feature}_
+
+* *Major enhancement*: added *Calendar Graphical User Interface*
+** What it does: allows users to view their Tasks chronologically. These will then be displayed in a reminders window that will pop up and remind users of urgent tasks.
 ** Justification: This feature improves the product significantly because a user can make mistakes in commands and the app should provide a convenient way to rectify them.
 ** Highlights: This enhancement affects existing commands and commands to be added in future. It required an in-depth analysis of design alternatives. The implementation too was challenging as it required changes to existing commands.
 ** Credits: _{mention here if you reused any code/ideas from elsewhere or if a third-party library is heavily used in the feature so that a reader can make a more accurate judgement of how much effort went into the feature}_
 
-* *Minor enhancement*: added a history command that allows the user to navigate to previous commands using up/down keys.
+.Calendar View
+image::calendarview.png[width=500]
 
-* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
+* *Minor enhancement*: added delete button for easy deletion of Reminders and Notes.
+
+.Delete Button
+image::reminders/deletebutton.png[width=500]
+
+* *Minor enhancement*: added tabs in the Menu Bar for easy changing of tab.
+
+.Change Tab
+image::tabchange.png[width=500]
+
+* *Minor enhancement*: added a tab status at the bottom right corner for users to know which tab they are viewing.
+
+.Tab status
+image::tabstatus.png[width=500]
+
+* *Code contributed*: [https://github.com/AY1920S1-CS2103T-F14-2/main/commits?author=kerwin97[All commits]] [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=kerwin97[Code Contributions]]
 
 * *Other contributions*:
 
 ** Project management:
-*** Managed releases `v1.3` - `v1.5rc` (3 releases) on GitHub
+*** Managed and assigned these issues for the project: https://github.com/AY1920S1-CS2103T-F14-2/main/issues/82[#177], https://github.com/AY1920S1-CS2103T-F14-2/main/issues/94[#178], https://github.com/AY1920S1-CS2103T-F14-2/main/issues/104[#229], https://github.com/AY1920S1-CS2103T-F14-2/main/issues/104[#230]
+*** Managed bugs reported by other users in Practical Exam Dry Run: https://github.com/AY1920S1-CS2103T-F14-2/main/issues/296[#268], https://github.com/AY1920S1-CS2103T-F14-2/main/issues/296[#297]
+*** Managed releases `v1.1` - `v1.4` (4 releases) on GitHub
 ** Enhancements to existing features:
+*** Wrote multiple tests for existing features to increase code coverage incrementally (https://coveralls.io/builds/26875321[#], https://coveralls.io/builds/26800524[#], https://coveralls.io/builds/26771396[#])
 *** Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
 *** Wrote additional tests for existing features to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
 ** Documentation:
+*** Added detailed implementation documentation for the reminders, calendar and gui feature in User Guide
 *** Did cosmetic tweaks to existing contents of the User Guide: https://github.com[#14]
 ** Community:
 *** PRs reviewed (with non-trivial review comments): https://github.com[#12], https://github.com[#32], https://github.com[#19], https://github.com[#42]
-*** Contributed to forum discussions (examples:  https://github.com[1], https://github.com[2], https://github.com[3], https://github.com[4])
 *** Reported bugs and suggestions for other teams in the class (examples:  https://github.com[1], https://github.com[2], https://github.com[3])
-*** Some parts of the history feature I added was adopted by several other class mates (https://github.com[1], https://github.com[2])
+
 ** Tools:
 *** Integrated a third party library (Natty) to the project (https://github.com[#42])
 *** Integrated a new Github plugin (CircleCI) to the team repo
 
-_{you can add/remove categories in the list above}_
 
 == Contributions to the User Guide
 
