--- a/docs/team/Xuerneas.adoc
+++ b/docs/team/Xuerneas.adoc
@@ -20,6 +20,11 @@ Those features of TutorAid was selected specifically for the target user - tutor
 
 The user interacts with TutorAid using a Command Line Interface (CLI), with a Graphical User Interface (GUI) created with JavaFX for user to better view the interactions.
 
+== Role
+
+My role in this project was to design and write the codes for the task-commands in Calendar feature as well as the undo and redo features. The sections below explain those enhancements in detail.
+
+
 == Summary of contributions
 
 * *_Major enhancement_*: added *the ability to undo/redo previous commands*
